--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-swipeable-views": "^0.13.1"
   }
 }
